# Fluid

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  USAGE.md
.agents/qa/: crate_exclusions.md  doc_path_checklist.md  draft_persistence_protocol.md  manifest_merge_checklist.md  model_routing_table.md  tier_a_commit_protocol.md
.agents/skills/coordinator-generator/: SKILL.md
.agents/skills/generate-readme/: SKILL.md
.agents/workflows/: workflow-coordinator-generator.md  workflow-session-recovery.md  workflow_generate_readme.md
.cursor/rules/: fluid-project.mdc
agent_debugger/: Cargo.toml  DECISIONS.md
agent_debugger/sessions/1777699274/: report.json  state_before.json  tree.json
agent_debugger/src/: cleanup.rs  config.rs  control.rs  error.rs  health.rs  input.rs  main.rs  report.rs  screenshot.rs  state.rs
app/: Cargo.toml
app/src/: app.rs
app/src/viewport/: camera.rs  mod.rs  pipeline.rs
bug_pool/: BUG_POOL.md
builder/: Cargo.toml
builder/src/: config.rs  main.rs  state.rs  subprocess.rs
builder/src/ui/: component_list.rs  flag_panel.rs  mod.rs  output_panel.rs
components/aerodynamic_simulator/: Cargo.toml  README.md  USAGE.md  build.rs
components/aerodynamic_simulator/src/: lib.rs
components/fem_structural/: Cargo.toml  README.md  USAGE.md  build.rs
components/fem_structural/src/: lib.rs
components/fluid_simulator/: Cargo.toml  README.md  USAGE.md  build.rs
components/fluid_simulator/src/: cfd.rs  compute.rs  lib.rs  sph.rs
components/motion_force_simulator/: Cargo.toml  README.md  USAGE.md  build.rs
components/thermodynamic_simulator/: Cargo.toml  README.md  USAGE.md  build.rs
components/thermodynamic_simulator/src/: lib.rs
config/: aerodynamic_simulator.toml  agent_debugger.toml  builder_flags.toml  core.toml  debugger.toml  fem_structural.toml  fluid_simulator.toml  motion_force_simulator.toml  physics_core.toml  rendering.toml  thermodynamic_simulator.toml
coordinators/: archival_master_coordinator_first_prompt.md
coordinators/build_system/: PROMPT.md
coordinators/core/: PROMPT.md
coordinators/debugger/: PROMPT.md
coordinators/physics_core/: PROMPT.md
coordinators/quality_gate/: PROMPT.md
coordinators/rendering/: PROMPT.md
coordinators/sim_components/: PROMPT.md
core/: Cargo.toml  README.md  USAGE.md  build.rs
core/src/: event_bus.rs  event_bus_impl.rs  lib.rs  units.rs
core/src/ecs/: mod.rs  traits.rs  world.rs
core/src/math/: mod.rs
core/src/memory/: mod.rs
core/src/scene/: mod.rs
core/src/threading/: mod.rs  rayon_pool.rs  traits.rs
core/src/time/: mod.rs
debugger/: Cargo.toml  build.rs
debugger/src/: bug_pool_reporter.rs  config.rs  event_bridge.rs  events.rs  http_server.rs  lib.rs  log_archiver.rs  log_system.rs
debugger/src/assets/: index.html
knowledge/: capability_tiers.md  config_schema.md  dependency_graph.md  file_structure.md  model_tier_policy.md  physics_contract.md  project_manifest.md
knowledge_b/: PROPOSED_doc_status_manifest_section.md  qa_agent_doc_pipeline_20260428T214714Z_issue1_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_issue2_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_issue3_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_issue4_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_issue5_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_issue7_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_issue8_resolution.md  qa_agent_doc_pipeline_20260428T214714Z_qa_pipeline_report.md  tier_b_agent_20260427T114511_c1_status.md  tier_b_agent_20260427T120100_c2_status.md  tier_b_scaffolder_20260427T053551Z_scaffold_observations.md  tier_b_scaffolder_20260427T053551Z_scaffold_report.md
pack/: coordinator_generator_skill_designer_prompt.md  session_recovery_skill_designer_prompt.md
pack/c1_bugfix_20260502T002703Z/: context.md  handoff_prompt.md
pack/c1_complete_20260428T080200Z/: context.md
pack/c1_core_20260428T022400Z/: context.md  handoff_prompt.md
pack/c2_complete_20260429T173700Z/: context.md  handoff_prompt.md
pack/c2_reactivation_20260502T003850Z/: context.md
pack/c2_reactivation_bug004_20260502T004358Z/: context.md
pack/c3_reactivation_bug012_20260502T003829Z/: context.md
pack/c3_rendering_20260428T173700Z/: context.md  handoff_prompt.md
pack/c4_physics_core_20260429T230621Z/: context.md  handoff_prompt.md
pack/c4_physics_core_continuation_20260429T164538Z/: context.md  handoff_prompt.md
pack/c5_complete_20260430T064800Z/: context.md  handoff_prompt_c6.md  handoff_prompt_c7.md
pack/c5_impl_20260429T214423Z/: context.md  handoff_prompt.md
pack/c5_scaffold_20260429T213456Z/: context.md  handoff_prompt.md
pack/c6_debugger_complete_20260430T071000Z/: context.md  handoff_prompt.md
pack/c7_quality_gate_20260501T184800Z/: context.md  handoff_prompt.md
pack/c8/: LATEST.md
pack/c8_session4_20260502T/: context.md  handoff_prompt.md
pack/c9/: LATEST.md  MANIFEST.md
pack/c9_session1_20260502T101833Z/: context.md  handoff_prompt.md
pack/codex_20260429T000000Z/: session_recovery_design_note.md
pack/codex_generate_readme_20260429T0211120530/: context.md
pack/qa_allowlist_fix_20260502T003935Z/: context.md
pack/root_coordinator_20260427T032847Z/: context.md  handoff_prompt.md
pack/root_coordinator_closure_20260502T001350Z/: context.md
pack/tierb_c1_handoff/: PROMPT.md
pack/tierb_c2_handoff/: PROMPT.md
physics_core/: Cargo.toml  build.rs
physics_core/src/: lib.rs
physics_core/src/collision/: broadphase.rs  epa.rs  gjk.rs  mod.rs  traits.rs
physics_core/src/constraints/: mod.rs  sequential_impulse.rs  traits.rs
physics_core/src/integrators/: euler.rs  leap_frog.rs  mod.rs  newmark_beta.rs  rk4.rs  traits.rs  velocity_verlet.rs
physics_core/src/rigid_body/: mod.rs
physics_core/src/soft_body/: mod.rs
rendering/: Cargo.toml  README.md  USAGE.md  build.rs
rendering/src/: camera.rs  debug_overlay.rs  device.rs  http_preview.rs  lib.rs  scene_renderer.rs  surface.rs
rendering/src/pipeline/: mod.rs  tier0_pipeline.rs
rendering/src/tier0/: mod.rs  renderer.rs
(+9 files in other folders)
