[package]
name = "thermodynamic_simulator"
version.workspace = true
edition.workspace = true

[features]
default = []
tier_0 = []
tier_1 = []
tier_2 = []
tier_3 = []
debug_overlay = []

[dependencies]
core = { path = "../../core" }
physics_core = { path = "../../physics_core", features = ["tier_1"] }
glam = { workspace = true }

[package.metadata.fluid]
requires = []
